# tokio_actix_sample

./: Cargo.toml
src/: main.rs  server.rs
ssl/: fullchain.pem  privkey.pem
static/: index.html  script.js
