[package]
name = "tokio_actix_sample"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-files = "0.6"
actix-cors = "0.7.0"
actix = "0.13"
actix-web-actors = "4.1.0"
futures = "0.3"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4"
tokio-stream = "0.1"

